plugins {
	id "application"
	id "java"
	id "com.diffplug.spotless" version "7.0.2"
	id "org.sonarqube" version "6.1.0.5360"
	id "jacoco-report-aggregation"
}

defaultTasks "clean", "spotlessApply", "build"

repositories {
	maven {
		url "https://gds.jfrog.io/artifactory/di-allowed-repos"
	}
}

dependencies {
	implementation "com.google.guava:guava:33.4.6-jre"
	implementation group: "io.dropwizard", name: "dropwizard-core", version: "4.0.13"
	implementation group: 'io.dropwizard', name: 'dropwizard-client', version: '4.0.13'
	implementation 'org.bouncycastle:bcpkix-jdk18on:1.80'
	implementation "com.nimbusds:oauth2-oidc-sdk:11.23.1"
	implementation "software.amazon.awssdk:kms:2.31.16"
	implementation "software.amazon.awssdk:dynamodb:2.31.16"
	implementation "software.amazon.awssdk:dynamodb-enhanced:2.31.16"
	implementation "software.amazon.awssdk:url-connection-client:2.31.16"
	implementation 'software.amazon.awssdk:core:2.31.16'
	implementation 'software.amazon.awssdk:arns:2.31.16'
	implementation "com.fasterxml.jackson.core:jackson-databind:2.18.3"
	implementation 'com.fasterxml.jackson.core:jackson-annotations:2.18.3'
	implementation 'org.jetbrains:annotations:26.0.2'
	implementation group: 'io.dropwizard', name: 'dropwizard-json-logging', version: '4.0.13'

	compileOnly "org.projectlombok:lombok:1.18.38"
	annotationProcessor 'org.projectlombok:lombok:1.18.38'

	testImplementation "org.junit.jupiter:junit-jupiter-api:5.12.1"
	testImplementation "org.mockito:mockito-junit-jupiter:5.17.0"
	testImplementation "uk.org.webcompere:system-stubs-jupiter:2.1.8"
	testImplementation "org.hamcrest:hamcrest:3.0"
	testImplementation group: 'io.dropwizard', name: 'dropwizard-testing', version: '4.0.13'

	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

application {
	mainClass = "uk.gov.di.mobile.wallet.cri.ExampleCriApp"
}

jar {
	manifest {
		attributes(
				"Main-Class": "uk.gov.di.mobile.wallet.cri.ExampleCriApp")
	}

	from {
		configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) }
	}

	duplicatesStrategy(DuplicatesStrategy.EXCLUDE)
}

run {
	args = ["server", "config.yml"]
}

java {
	sourceCompatibility = JavaVersion.VERSION_17
	targetCompatibility = JavaVersion.VERSION_17
}

String jacocoBuildReportPath = "reports/jacoco/test/jacocoTestReport.xml"

sonar {
	properties {
		property "sonar.projectKey", "govuk-one-login_mobile-wallet-example-credential-issuer"
		property "sonar.organization", "govuk-one-login"
		property "sonar.host.url", "https://sonarcloud.io"
		property "sonar.coverage.exclusions", "**/src/test/**"
		property 'sonar.coverage.exclusions', "**/src/main/java/uk/gov/di/mobile/wallet/cri/ExampleCriApp.java"
		property "sonar.coverage.jacoco.xmlReportPaths", "$project.buildDir/$jacocoBuildReportPath"
	}
}

spotless {
	java {
		target "**/src/**/*.java"
		googleJavaFormat("1.18.0").aosp()
		importOrder "", "javax", "java", "\\#"
		endWithNewline()
		removeUnusedImports()
	}
	groovyGradle {
		target "**/*.gradle"
		greclipse()
		trimTrailingWhitespace()
		endWithNewline()
	}
}

jacocoTestReport {
	dependsOn test
	reports {
		xml.required.set(true)
	}
}

tasks.withType(Test).configureEach {
	testLogging {
		exceptionFormat "full"
		events "skipped", "passed", "failed"
	}
	useJUnitPlatform()
	jvmArgs "-Xshare:off"
	finalizedBy jacocoTestReport
}
